--- a/styles/price-table.scss
+++ b/styles/price-table.scss
@@ -60,8 +60,13 @@
 
   &__price {
     height: 105px;
-    display: flex;
     margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 67px;
 
     &_bg-green {
       background: #5bb189;
@@ -73,13 +78,6 @@
 
     &_bg-orange {
       background: #ec632a;
-    }
-
-    & h3 {
-      margin: auto;
-      font-weight: 700;
-      font-size: 55px;
-      line-height: 67px;
     }
   }
 
